[package]
name = "opaque"
version = "0.1.0"
authors = ["Ladi <Lldenaurois@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.secp256k1]
version = "0.17.2"

[dependencies.rand]
version = "0.7.3"

[dependencies.rand_chacha]
version = "0.2.1"

[dependencies.sha2]
version = "0.8.1"

[dependencies.aes-gcm]
version = "0.5.0"

[dependencies.aead]
version = "0.2.0"

[dependencies.rust-gmp]
version = "0.5.0"

[dependencies.hex]
versio = "0.4.2"
